2012-11-21  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        Disambiguate innerNodeFramePoint and mainFramePoint
        https://bugs.webkit.org/show_bug.cgi?id=98139

        Reviewed by Julien Chaffraix.

        * Api/qwebframe.cpp:
        (QWebHitTestResultPrivate::QWebHitTestResultPrivate):
        * Api/qwebpage.cpp:
        (QWebPagePrivate::TouchAdjuster::findCandidatePointForTouch):

2012-11-20  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r135295.
        http://trac.webkit.org/changeset/135295
        https://bugs.webkit.org/show_bug.cgi?id=102834

        This patch causes assertion to some layout tests on chromium
        (Requested by jianli on #webkit).

        * Api/qwebframe.cpp:
        (QWebFrame::QWebFrame):
        (QWebFrame::load):
        (QWebFrame::setHtml):
        (QWebFrame::setContent):
        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::setAlternateHtml):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::callErrorPageExtension):

2012-11-20  James Simonsen  <simonjam@chromium.org>

        Consolidate FrameLoader::load() into one function taking a FrameLoadRequest
        https://bugs.webkit.org/show_bug.cgi?id=102151

        Reviewed by Adam Barth.

        * Api/qwebframe.cpp:
        (QWebFrame::QWebFrame):
        (QWebFrame::load):
        (QWebFrame::setHtml):
        (QWebFrame::setContent):
        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::setAlternateHtml):
        (qt_dump_set_accepts_editing):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::callErrorPageExtension):

2012-11-18  Laszlo Gombos  <l.gombos@samsung.com>

        [Qt] Remove remaining traces of symbian
        https://bugs.webkit.org/show_bug.cgi?id=102634

        Reviewed by Kenneth Rohde Christiansen.

        Remove symbian related part from the API documentation.
